unpackaged/main/default/objects/Partner_Account_Review_1__c/Partner_Account_Review_1__c.object-meta.xml
<CustomObject>
    <label>Partner Account Review</label>
    <nameField>
        <label>Partner Account Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Account Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>