unpackaged/main/default/objects/Partner_Account_Review_1__c/fields/PAR_Date__c.field-meta.xml
<CustomField>
    <fullName>PAR_Date__c</fullName>
    <label>PAR Date</label>
    <type>Date</type>
</CustomField>