unpackaged/main/default/objects/Partner_Account_Review_1__c/fields/PAR_Notes__c.field-meta.xml
<CustomField>
    <fullName>PAR_Notes__c</fullName>
    <label>PAR Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>