unpackaged/main/default/objects/Partner_Account_Review_1__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Account Reviews</relationshipLabel>
    <relationshipName>Partner_Account_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>