unpackaged/main/default/objects/Partner_Account_Review_1__c/fields/Supplier_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Accounts__c</fullName>
    <label>Supplier Accounts</label>
    <referenceTo>Supplier_Accounts__c</referenceTo>
    <relationshipLabel>Partner Account Reviews</relationshipLabel>
    <relationshipName>Partner_Account_Reviews1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>