unpackaged/main/default/objects/Partner_Account_Review_1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Supplier_Accounts__c</columns>
    <columns>NAME</columns>
    <columns>PAR_Date__c</columns>
    <columns>PAR_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>